--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
-    "@prisma/client": "^6.16.1",
     "@mui/x-charts": "^8.11.2",
+    "@prisma/client": "^6.16.1",
+    "@tanstack/react-query": "^5.87.4",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
