--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@mui/x-charts": "^8.11.2",
     "@prisma/client": "^6.16.1",
     "@tanstack/react-query": "^5.87.4",
+    "@types/puppeteer": "^5.4.7",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "puppeteer": "^24.20.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
